# ROS

Day 0/ex01/: .bashrc  ex01.txt
Day 0/ex010/turtle_control/: CMakeLists.txt  package.xml
Day 0/ex010/turtle_control/src/: text_command.cpp  text_to_cmd_vel.cpp
Day 0/ex02/: list_files_rospy_tutorials.txt
Day 0/ex03/ali_deeb/: CMakeLists.txt  package.xml
Day 0/ex04/: catkin_make.txt
Day 0/ex05/: rosnode_list.txt  rosnode_ping.txt
Day 0/ex06/: cmd_vel.txt
Day 0/ex07/: parameter_server.txt  rosservice_list.txt
Day 0/ex08/: rqt_console.txt  three_turtles.launch
Day 0/ex09/ali_deeb/: CMakeLists.txt  package.xml
